--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: cadetblue;
+  background-color: rgb(168, 193, 222);
   font-family: "Neucha", cursive;
 }
 
