--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,11 +16,11 @@
 }
 
 .input-box:focus {
-    box-shadow: 0 0 10px 1000px  rgb(33, 44, 57); /* fixed syntax */
+    /* box-shadow: 0 0 10px 1000px  rgb(33, 44, 57); fixed syntax */
     border: 2px solid rgb(167, 198, 234);
     
     outline: none;
-  }
+}
 
 /* Go button */
 .input-submit {
